[metadata]
name = networking-calico
summary = This project contains documentation and code for integrating Project Calico networking into OpenStack/Neutron.
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/networking-calico/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    networking_calico

[entry_points]
console_scripts =
    calico-dhcp-agent = networking_calico.agent.dhcp_agent:main
neutron.ml2.mechanism_drivers =
    calico = networking_calico.plugins.ml2.drivers.calico.mech_calico:CalicoMechanismDriver
neutron.core_plugins =
    calico = networking_calico.plugins.calico.plugin:CalicoPlugin

[compile_catalog]
directory = networking_calico/locale
domain = networking-calico

[update_catalog]
domain = networking-calico
output_dir = networking_calico/locale
input_file = networking_calico/locale/networking-calico.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = networking_calico/locale/networking-calico.pot
