load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["auth.go",
            "binder.go",
            "creds.go",
            "watcher.go"],
    importpath = "github.com/colabsaumoh/proto-udsuspver/binder",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials:go_default_library",
        "@org_golang_google_grpc//peer:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)
