[metadata]
name = networking-calico
summary = This project contains documentation and code for integrating Project Calico networking into OpenStack/Neutron.
description-file =
    README.md
author = Project Calico
author-email = neil@projectcalico.org
home-page = https://www.projectcalico.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
