[metadata]
name = networking-calico
summary = This project contains documentation and code for integrating Project Calico networking into OpenStack/Neutron.
description_file =
    README.md
author = Project Calico
author_email = neil@projectcalico.org
home_page = https://www.projectcalico.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
