load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["nodeagent.go"],
    importpath = "colabsaumoh/proto-udsuspver/nodeagent",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_colabsaumoh_proto_udsuspver//nodeagentmgmt:go_default_library",
        "@com_github_colabsaumoh_proto_udsuspver//workloadapi:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
    ],
)

go_binary(
    name = "nodeagent",
    embed = [":go_default_library"],
    importpath = "colabsaumoh/proto-udsuspver/nodeagent",
    visibility = ["//visibility:public"],
)
