load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["nodeagent.go"],
    importpath = "github.com/colabsaumoh/proto-udsuspver/nodeagent",
    visibility = ["//visibility:private"],
    deps = [
	    "//mgmtwlhintf:go_default_library",
        "//nodeagentmgmt:go_default_library",
        "//workloadhandler:go_default_library",
        "//workloadapi:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
    ],
)

go_binary(
    name = "nodeagent",
    embed = [":go_default_library"],
    importpath = "github.com/colabsaumoh/proto-udsuspver/nodeagent",
    visibility = ["//visibility:public"],
)
