load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["nodeagentmgmt.go"],
    importpath = "colabsaumoh/proto-udsuspver/nodeagentmgmt",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_colabsaumoh_proto_udsuspver//protos/mgmtintf_v1:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)
