load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["workloadapi.go"],
    importpath = "github.com/colabsaumoh/proto-udsuspver/workloadapi",
    visibility = ["//visibility:public"],
    deps = [
	"//mgmtwlhintf:go_default_library",
        "//workloadhandler:go_default_library",
        "//protos/udsver_v1:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)
